properties now connected with unique materials; updated methods for properties manipulation; added getPropertiesList; started frontend side for adding values: basic form, getting material list

--- a/web/index.html
+++ b/web/index.html
@@ -8,7 +8,7 @@
     <script src="js/app.js?1"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.8.0/chart.min.js" integrity="sha512-sW/w8s4RWTdFFSduOTGtk4isV1+190E/GghVffMA9XczdJ2MDzSzLEubKAs5h0wzgSJOQTRYyaz73L3d6RtJSg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <link rel="stylesheet" href="stylesheet.css">
-    <link rel="icon" href="icon.ico">
+    <link rel="icon" href="favicon.ico">
 </head>
 <body>
     <div class="container">
