property dropdown works and refreshes after selecting new material

--- a/web/add.html
+++ b/web/add.html
@@ -13,15 +13,29 @@
 <div class="container">
 
     <div class="row mt-5">
-        <div class="offset-4 col-4 shadow p-3 mb-2 bg-white  rounded">
+        <div class="offset-0 col-4 shadow p-3 mb-2 bg-white rounded">
+            <h3 class="mb-42">Добавить запись</h3>
             <div class="mb-3">
                 <select id="materialSourceSelect" class="form-select mb-3"></select>
                 <select id="propertySelect" class="form-select mb-3"></select>
-                <input id="valueInput" type="text" >
+
+                <div class="input-group input-group-sm mb-3">
+                    <input id="valueInput" type="text" class="form-control" placeholder="Введите значение">
+                </div>
                 <button id="addRecordBtn" class="btn btn-primary js-send-btn shadow-none">Добавить</button>
             </div>
+
         </div>
+
+        <div class="offset-1 col-4 shadow p-3 mb-2 bg-white rounded">
+            <h3 class="mb-42">Добавить материал</h3>
+            <div class="mb-3">
+
+            </div>
+        </div>
+
     </div>
+
 </div>
 
 </body>
