started docx generation

--- a/web/add.html
+++ b/web/add.html
@@ -17,7 +17,13 @@
             <h3 class="mb-42">Добавить запись</h3>
             <div class="mb-3">
                 <select id="materialSourceSelect" class="form-select mb-3"></select>
-                <select id="propertySelect" class="form-select mb-3"></select>
+
+                <div class="input-group ">
+                    <select id="propertySelect" class="form-select mb-3"></select>
+                    <div class="input-group-append">
+                        <button class="btn btn-outline-secondary" type="button">Добавить</button>
+                    </div>
+                </div>
 
                 <div class="input-group input-group-sm mb-3">
                     <input id="valueInput" type="text" class="form-control" placeholder="Введите значение">
